<resources>
    <string name="app_name">Survey</string>
    <string name="prompt_header_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_network">Sorry! Not connected to internet.</string>
    <string name="error_invalid_username">Your username is empty</string>
    <string name="error_invalid_password">Your password is empty</string>
    <string name="error_invalid_login">This email address or password is invalid</string>
    <string name="error_invalid_login_no_pass">This email address is invalid</string>
    <string name="title_sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="store_name">Tên cửa hàng</string>
    <string name="title_address">Địa chỉ</string>
    <string name="title_stresst">Tên đường</string>
    <string name="title_ward">Phường</string>
    <string name="title_district">Quận</string>
    <string name="date_of_survey">Ngày khảo sát:</string>
    <string name="person_survey">Người khảo sát</string>
    <string name="example_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="title_survey">SURVEY</string>
    <string name="title_start_survey">Begin survey</string>
    <string name="error_missing_password">Password must at least 6 charactor</string>
    <string name="default_value_district">Quận, Huyện,...</string>
    <string name="default_value_province">Tỉnh, thành phố,...</string>
    <string name="default_value_ward">Xã, phường,...</string>
    <string name="stop_stuck_question_exit_survey">Bạn muốn dừng khảo sát này?</string>
    <string name="title_wellcome">Wellcome to</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_button_login">Login</string>
    <string name="title_text_forgot_password">Forgot your password?</string>
    <string name="title_text_or">or</string>
    <string name="title_no_have_account">Do not have account? Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dialog">Chúc mừng bạn đã hoàn thành khảo sát</string>
    <string name="success">Success</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="text_data">Your info text goes here. Loremipsum dolor sit amet, consecteturn adipisicing elit, sed do eiusmod.</string>
    <string name="prompt_dialog">Prompt Dialog</string>
    <string name="pic">Pic</string>
    <string name="text">Text</string>
    <string name="text_and_pic">Text And Pic</string>
    <string name="ok">OK</string>
</resources>
