<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_backgound_login1"
         />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cs_login_background" />

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="#80000000" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/login_email_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/ic_logo_icon2" />

                <LinearLayout
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/ef_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/prompt_header_login"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <AutoCompleteTextView
                        android:textColorHint="@color/ef_white"
                        android:id="@+id/login_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/background_black_border"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true">

                    </AutoCompleteTextView>


                    <EditText
                        android:textColorHint="@color/ef_white"
                        android:id="@+id/login_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_black_border"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true">

                    </EditText>

                    <Button
                        android:textAllCaps="false"
                        android:id="@+id/login_signin_btn"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="#ed6d6e"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />
                    <LinearLayout

                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/ef_white"
                            android:layout_gravity="left"
                            android:textAllCaps="false"
                            android:text="Forget Login?"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:gravity="right"
                            android:textColor="@color/ef_white"
                            android:textAllCaps="false"
                            android:text="Don't have account, Sign up?"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>
                </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:minHeight="40dp"
                android:maxHeight="40dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/cs_progressbar"
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>